<resources>
    <string name="app_name">Mentos</string>
    <string name="link_terms_service">https://sky-cyclamen-acf.notion.site/31c7b49608c740ea9fd2ed314761046c</string>
    <string name="link_terms_personal">https://sky-cyclamen-acf.notion.site/2a4587c245df47d88c46b1a701d0649b</string>
    <string name="mentos_gmail">teammentos0214@gmail.com</string>
    <string name="main_bottom_search">멘토-쓰 찾기</string>
    <string name="main_bottom_state">멘토스 현황</string>
    <string name="main_bottom_home">우리학교</string>
    <string name="main_bottom_profile">내 정보</string>
    <string name="main_bottom_setting">설정</string>
    <string name="bottom_start_mentoring">멘토링 시작하기</string>
    <string name="bottom_chat_mentor">멘토와 대화하기</string>
    <string name="bottom_chat_mentee">멘티와 대화하기</string>
    <string name="dialog_util_confirm">확인</string>
    <string name="dialog_util_cancel">취소</string>
    <string name="dialog_stop_write">작성된 내용이 저장되지 않습니다. 취소하시겠습니까?</string>
    <string name="dialog_post_delete">작성된 글이 삭제됩니다. 삭제하시겠습니까?</string>
    <string name="dialog_sign_in_fail">아이디, 비밀번호를 다시 확인해 주세요</string>
    <string name="dialog_school_fail">학교명과 도메인을 확인해 주세요!</string>
    <string name="dialog_school_email_send">해당 이메일로 인증번호가 전송되었습니다!</string>
    <string name="dialog_email_confirm_fail">인증번호를 다시 확인해 주세요</string>
    <string name="dialog_find_password">해당 이메일로 임시 비밀번호가 발급되었습니다</string>
    <string name="dialog_find_password_fail">이메일을 다시 확인해 주세요!</string>
    <string name="dialog_withdrawal_password">😢\n<b>탈퇴</b>를 위해\n<b>계정 비밀번호</b>를 입력해주세요</string>
    <string name="dialog_withdrawal_password_btn">멘토-쓰 이용 종료</string>
    <string name="dialog_review_et_title">📝간단한 후기를 적어주세요!</string>
    <string name="dialog_review_et_sub_title">멘토의 프로필에 기록되는 내용이니 신중하게 적어주세요!</string>
    <string name="dialog_review_et_btn">최종 등록하기</string>
    <string name="dialog_review_title">멘토링의 별점을 매겨주세요!</string>
    <string name="dialog_review_btn">다음 단계로(1/2)</string>
    <string name="dialog_record_alert_title">⚠️\n기록을 남기기 전에...</string>
    <string name="dialog_record_alert_sub_title">글 1회 작성 시 멘토링이 1회 진행된 것으로 간주됩니다!\n삭제는 불가능하니 신중하게 적어주세요 :)</string>
    <string name="dialog_record_btn_1">기록하기</string>
    <string name="dialog_record_btn_2">한 번 더 확인하기</string>
    <string name="dialog_withdrawal_title"><b>멘토-쓰 회원 탈퇴</b>를 위해\n들어오셨나요?😭</string>
    <string name="dialog_withdrawal_complete_title"><b>탈퇴</b>가 완료되었어요😢</string>
    <string name="dialog_withdrawal_complete_sub_title">멘토-쓰는 언제든 열려있으니,\n생각나면 다시 찾아주세요 :)</string>
    <string name="dialog_withdrawal_complete_btn">멘토-쓰 종료</string>
    <string name="dialog_withdrawal_btn_1">😢네,탈퇴하기</string>
    <string name="dialog_withdrawal_btn_2">😀아니요,계속 이용하기</string>
    <string name="dialog_record_complete_title">성공적으로 기록되었어요!😊</string>
    <string name="dialog_record_complete_sub_title">멘토링 현황에서 확인 가능합니다!</string>
    <string name="dialog_review_complete_sub_title">멘토의 프로필에서 확인 가능합니다</string>
    <string name="dialog_record_complete_btn">확인</string>
    <string name="dialog_logout_title"><b>멘토-쓰</b> 앱에서\n<b>로그아웃</b>하시겠어요?</string>
    <string name="dialog_logout_btn_1">😢로그아웃하기</string>
    <string name="dialog_logout_btn_2">😀계속 이용하기</string>
    <string name="dialog_mentoring_complete_title">멘토링 완료-!\n멘토-쓰가 전달되었어요!😊</string>
    <string name="dialog_mentoring_complete_sub_title">내정보에서 확인해 주세요!</string>
    <string name="dialog_report_title">신고 사유를 적어주세요😢</string>
    <string name="dialog_report_sub_title">해당 사용자의 노출이 줄어들어요.</string>
    <string name="dialog_report_complete">작성 완료</string>
    <string name="dialog_report_complete_title">신고처리되었어요🙂</string>
    <string name="dialog_report_complete_sub_title">신고된 유저가 노출을 줄이도록 처리했어요!\n앞으로 검색해도 이 곳에 나타나지 않아요.</string>
    <string name="dialog_login_block_title">⚠️로그인이 불가해요⚠️</string>
    <string name="dialog_login_block_sub_title">해당 계정은 신고가 누적되어 이용이 불가해요.</string>
    <string name="dialog_account_title">본격적인 이용 전, <b>역할 설정</b>이 필요해요!</string>
    <string name="dialog_account_sub_title">두 역할 모두 활동 가능해요\n우선은 한 역할만 선택해주세요</string>
    <string name="dialog_account_btn_mentor">멘토로 참여하기</string>
    <string name="dialog_account_btn_mentee">멘티로 참여하기</string>
    <string name="mentoring_start1_title">멘토링 시작하기</string>
    <string name="mentoring_start1_subtitle">세부 사항을 적어볼까요?</string>
    <string name="mentoring_start1_plus_title">멘토링 진행 횟수를 적어주세요!</string>
    <string name="mentoring_start1_error">최소 1회, 최대 10회까지 가능합니다!</string>
    <string name="mentoring_start1_next_button">다음 단계로(1/3)</string>
    <string name="mentoring_start2_title">멘토링 시작하기</string>
    <string name="mentoring_start2_subtitle1">멘토는 멘티에게\n몇 개의 멘토-쓰를 받나요?</string>
    <string name="mentoring_start2_error">최소 1개 이상 전달 가능합니다</string>
    <string name="mentoring_start2_error2">보유한 멘토-쓰를 초과한 개수입니다</string>
    <string name="mentoring_start2_next_button">다음 단계로(2/3)</string>
    <string name="mentoring_start3_title">멘토링 시작하기</string>
    <string name="mentoring_start3_subtitle1">멘토링 할 멘토-쓰 종류를\n골라주세요.</string>
    <string name="mentoring_start3_select">선택하기</string>
    <string name="mentoring_start3_next_button">다음 단계로(3/3)</string>
    <string name="mentoring_start3_complete_next_button">멘토-쓰 최종 완성하기</string>
    <string name="mentos_red">경제/경영</string>
    <string name="mentos_orange">인문</string>
    <string name="mentos_yellow">사회</string>
    <string name="mentos_green">어문</string>
    <string name="mentos_green_dark">의학</string>
    <string name="mentos_sky">공학</string>
    <string name="mentos_blue">자연과학</string>
    <string name="mentos_pink">IT</string>
    <string name="mentos_purple">교육</string>
    <string name="mentos_brown_light">건축</string>
    <string name="mentos_brown_red">예체능</string>
    <string name="mentos_gray">기타</string>
    <string name="mentos_category_complete">선택 완료</string>
    <string name="mentoring_start4_title">멘토링 시작하기</string>
    <string name="mentoring_start4_subtitle1">축하해요!</string>
    <string name="mentoring_start4_subtitle2">이제는 진짜로\n멘토-쓰를 사용할 시간</string>
    <string name="mentoring_start4_next_button">멘토 수락 요청하기</string>
    <string name="mentoring_start4_next_button_bottom_comment">멘토가 최종 수락하면 멘토링이 바로 시작돼요</string>
    <string name="mentoring_start5_subtitle1">멘토가 확인 중이에요</string>
    <string name="mentoring_start5_subtitle2">멘토가 수락할 때 까지 잠시만 기다려주세요</string>
    <string name="mentoring_accept_subtitle1">멘토링 요청이 들어왔어요</string>
    <string name="mentoring_accept_subtitle2">멘토가 최종 수락하면 멘토링이 바로 시작돼요</string>
    <string name="mentoring_accept_yes">멘토링 수락하기</string>
    <string name="mentoring_accept_no">멘토링 거절하기</string>
    <string name="mentoring_accepted_subtitle1">멘토의 수락이 완료되었어요</string>
    <string name="mentoring_accepted_subtitle2">멘토링 현황 칸에서 확인할 수 있어요!</string>
    <string name="mentee_home_search_main">멘토-쓰를 통해\n더욱 발전된 하루를 만들어 볼까요?</string>
    <string name="mentee_home_search_sub">검색을 통해 나에게 맞는 우리학교 멘토를 찾아봐요!</string>
    <string name="mentee_home_category_main">나에게 필요한 멘토-쓰를 찾아볼까요?</string>
    <string name="mentee_home_category_sub">도움이 필요한 영역을 바탕으로 우리학교의 멘토를 소개할게요.</string>
    <string name="mentee_home_other">다른 영역에도 이렇게 다양한 멘토가 있어요!</string>
    <string name="mentee_home_category_empty">멘토가 아직 소개 글을 작성하지 않았어요.\n그동안 필요한 영역을 프로필에 더 상세하게 적어볼까요?</string>
    <string name="mentee_home_other_empty">멘토가 멘티의 프로필을 보고\n더욱 정확한 도움을 줄 수 있어요!</string>
    <string name="mentor_home_category_empty">아직 가입완료한 멘티가 없어요!\n그동안 멘토링 가능한 내용을 글로 적어 볼까요?\n(내정보 - 우측 상단 아이콘)</string>
    <string name="mentor_home_other_empty">멘티는 멘토가 쓴 글을 읽고 멘토링을 요청할 거예요!</string>
    <string name="mentor_home_search_main">이곳에서\n당신의 정보가 가치있게 쓰이길 바라며!</string>
    <string name="mentor_home_search_sub">내가 도움줄 수 있는 우리학교 멘토를 만나볼까요?</string>
    <string name="mentor_home_category_main">우리 학교의 멘티를 찾아볼까요?</string>
    <string name="mentor_home_category_sub">도움을 줄 수 있는 영역을 바탕으로 우리학교 멘티를 소개할게요.</string>
    <string name="mentor_home_other">다른 영역에도 이렇게 다양한 멘티가 있어요!</string>
    <string name="search_title_sub">멘토가 가능한 멘토링 내용을 세부적인 글로 작성했어요</string>
    <string name="search_mentee_title_sub">도움이 필요한 우리학교 멘티를 찾아보아요!</string>
    <string name="search_title_all_category">전체검색</string>
    <string name="search_create_title">멘티에게 알려줄 수 있는 내용을\n세부적으로 적어주세요!</string>
    <string name="search_create_sub_title">과목별로, 특징별로, 멘토의 개성이 담긴 글을 작성해볼까요?</string>
    <string name="search_create_button">글 등록하기</string>
    <string name="search_create_modify_complete">글 수정완료-!</string>
    <string name="search_create_button_hint">작성한 글은 ‘프로필’과 ‘멘토-쓰 찾기’ 두 영역에 표시돼요</string>
    <string name="search_detail_mentor">멘토</string>
    <string name="profile_mentor_tab">멘토 프로필</string>
    <string name="profile_mentee_tab">멘티 프로필</string>
    <string name="profile_info_mentoring_count_title">멘토링 진행 횟수</string>
    <string name="profile_info_open_private_sex">성별 비공개</string>
    <string name="profile_info_female">여성</string>
    <string name="profile_info_male">남성</string>
    <string name="profile_inform_button">멘토-쓰 운영진에게 할말이 있을때는?</string>
    <string name="mentee_profile_major_title">멘티는 이 영역의 도움이 필요해요!</string>
    <string name="mentee_profile_add_mentor_button">멘토로도 참여하고 싶어요!(프로필 생성하기)</string>
    <string name="mentor_profile_major_title">멘토는 이 영역에 도움을 줄 수 있어요!</string>
    <string name="mentor_profile_detail_title">세부적으로 어떤 도움을 받을 수 있을까요?</string>
    <string name="mentor_profile_review_title">함께 한 멘티들의 후기❤️</string>
    <string name="mentor_profile_mentoring_title">지금까지 진행한 멘토링</string>
    <string name="mentor_profile_add_mentee_button">멘티로도 참여하고 싶어요!(프로필 생성하기)</string>
    <string name="mentor_profile_post_empty">아직 멘토의 글이 올라오지 않았어요!</string>
    <string name="mentor_profile_review_empty">멘토-쓰를 교환할 기회가 없었네요!\n멘토와 첫 멘토링을 진행해 볼까요?</string>
    <string name="my_post_list_title">내가 쓴 글</string>
    <string name="mentor_post_list_title">멘토 글 모음</string>
    <string name="review_list_title">멘티들의 후기</string>
    <string name="splash_title">누군가의 도움이 필요할 땐\n<b>멘토-쓰</b> 쓰러 가자!</string>
    <string name="splash_btn_sign_in">이미 회원 가입을 완료했다면?</string>
    <string name="splash_btn_sign_up">회원가입 하러가기</string>
    <string name="sign_up_first_title">다음 항목을 작성해주세요</string>
    <string name="sign_up_first_sub_title">이 곳에서는 별명으로 소통합니다!\n설정에서 성별 공개를 비공개로 바꿀 수 있어요!</string>
    <string name="sign_up_name">이름</string>
    <string name="sign_up_nick_name">별명</string>
    <string name="sign_up_nick_name_check">중복확인</string>
    <string name="sign_up_sex">성별</string>
    <string name="sign_up_sex_men">남</string>
    <string name="sign_up_sex_women">여</string>
    <string name="sign_up_name_message">특수문자 사용은 불가능합니다.</string>
    <string name="sign_up_nick_name_success">사용 가능한 별명입니다</string>
    <string name="sign_up_nick_name_fail">중복된 별명입니다</string>
    <string name="sign_up_first_btn">다음 단계로 넘어가기(1/4)</string>
    <string name="sign_up_second_title"><b>학교 인증</b>이 필요해요!</string>
    <string name="sign_up_second_sub_title">메일 주소는 아이디로 사용됩니다!</string>
    <string name="sign_up_school">학교명</string>
    <string name="sign_up_school_hint">ex) 서울대학교: \"서울\"입력</string>
    <string name="sign_up_email">메일주소</string>
    <string name="sign_up_email_confirm">인증번호</string>
    <string name="sign_up_email_confirm_btn">인증받기</string>
    <string name="sign_up_email_message">(3분 내에 입력해주세요)</string>
    <string name="sign_up_second_btn">다음 단계로 넘어가기(2/4)</string>
    <string name="sign_up_email_duplicate">중복된 이메일입니다.</string>
    <string name="sign_up_third_title"><b>전공</b>과 <b>학번</b>을 적어주세요</string>
    <string name="sign_up_third_sub_title">다·부전공 포함한 전공을 직접 입력해 주세요!</string>
    <string name="sign_up_major">전공</string>
    <string name="state_count">회</string>
    <string name="state_mentos_count">(멘토-쓰 "</string>
    <string name="state_mentos_count_2">개)</string>
    <string name="state_one_count">회 / "</string>
    <string name="state_one_nickname_mentor">" 멘토 / "</string>
    <string name="state_one_nickname_mentee">" 멘티</string>
    <string name="state_before_confirm_item_title">수락 진행 중</string>
</resources>