<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_withdrawal_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/noto_regular"
        android:includeFontPadding="false"
        android:text="@string/dialog_withdrawal_title"
        android:textColor="@color/black_3333"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/dialog_withdrawal_btn_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_record_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/noto_bold"
        android:includeFontPadding="false"
        android:text="@string/dialog_record_alert_title"
        android:textColor="@color/black_3333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_sub_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="39dp"
        android:fontFamily="@font/noto_regular"
        android:includeFontPadding="false"
        android:text="@string/dialog_record_alert_sub_title"
        android:textColor="@color/gray_7070"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@id/dialog_record_btn_layout"
        app:layout_constraintStart_toStartOf="@id/dialog_record_title_tv"
        app:layout_constraintTop_toBottomOf="@id/dialog_record_title_tv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_withdrawal_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="25dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/dialog_withdrawal_first_btn_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_gray_a1_stroke_8"
            android:fontFamily="@font/noto_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingHorizontal="26dp"
            android:paddingVertical="14dp"
            android:text="@string/dialog_withdrawal_btn_1"
            android:textColor="@color/black_3333"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/dialog_withdrawal_second_btn_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_withdrawal_second_btn_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:background="@drawable/shape_black_fill_8"
            android:fontFamily="@font/noto_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingHorizontal="4dp"
            android:paddingVertical="14dp"
            android:text="@string/dialog_withdrawal_btn_2"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dialog_withdrawal_first_btn_tv"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_record_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/dialog_record_first_btn_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_gray_a1_stroke_8"
            android:fontFamily="@font/noto_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingHorizontal="42dp"
            android:paddingVertical="14dp"
            android:text="@string/dialog_record_btn_1"
            android:textColor="@color/black_3333"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/dialog_record_second_btn_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_record_second_btn_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:background="@drawable/shape_black_fill_8"
            android:fontFamily="@font/noto_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingHorizontal="22dp"
            android:paddingVertical="14dp"
            android:text="@string/dialog_record_btn_2"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dialog_record_first_btn_tv"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>