<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.mentos.mentosandroid.data.StateNow" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <soup.neumorphism.NeumorphCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:neumorph_backgroundColor="@color/white"
            app:neumorph_inset="4dp"
            app:neumorph_shadowColorDark="@color/gray_shadow"
            app:neumorph_shadowColorLight="@android:color/transparent"
            app:neumorph_shadowElevation="2dp"
            app:neumorph_shapeAppearance="@style/shadow_round_20"
            app:neumorph_shapeType="flat">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/state_now_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_gray_stroke_20">

                <ImageView
                    android:id="@+id/state_now_mentos_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/img_mentos_blue_55"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="2dp"
                    android:gravity="start"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@id/state_now_mentos_iv"
                    app:layout_constraintStart_toEndOf="@id/state_now_mentos_iv"
                    app:layout_constraintTop_toTopOf="@id/state_now_mentos_iv">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_bold"
                        android:includeFontPadding="false"
                        android:text="@string/state_before_confirm_item_title"
                        android:textColor="@color/black_1c1d"
                        android:textSize="13sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/state_now_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_regular"
                            android:includeFontPadding="false"
                            android:textColor="@color/gray_7070"
                            android:textSize="10sp"
                            tools:text="2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_regular"
                            android:includeFontPadding="false"
                            android:text="@string/state_one_count"
                            android:textColor="@color/gray_7070"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/state_now_count_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_regular"
                            android:includeFontPadding="false"
                            android:textColor="@color/gray_7070"
                            android:textSize="10sp"
                            tools:text="2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_regular"
                            android:includeFontPadding="false"
                            android:text="@string/state_count"
                            android:textColor="@color/gray_7070"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_regular"
                            android:includeFontPadding="false"
                            android:text="@string/state_mentos_count"
                            android:textColor="@color/gray_7070"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/state_now_mentos_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_regular"
                            android:includeFontPadding="false"
                            android:textColor="@color/gray_7070"
                            android:textSize="10sp"
                            tools:text="2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_regular"
                            android:includeFontPadding="false"
                            android:text="@string/state_mentos_count_2"
                            android:textColor="@color/gray_7070"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/state_now_nickname_mentor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_regular"
                            android:includeFontPadding="false"
                            android:text="@{data.mentoNickname}"
                            android:textColor="@color/gray_7070"
                            android:textSize="10sp"
                            tools:text="가은" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_regular"
                            android:includeFontPadding="false"
                            android:text="@string/state_one_nickname_mentor"
                            android:textColor="@color/gray_7070"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/state_now_nickname_mentee"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_regular"
                            android:includeFontPadding="false"
                            android:text="@{data.mentiNickname}"
                            android:textColor="@color/gray_7070"
                            android:textSize="10sp"
                            tools:text="가은" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_regular"
                            android:includeFontPadding="false"
                            android:text="@string/state_one_nickname_mentee"
                            android:textColor="@color/gray_7070"
                            android:textSize="10sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </soup.neumorphism.NeumorphCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>